tests/errors/tc_stmt_var_notype_noval.lx
@module "main"

pub const main -> fn () int {
    let x;
    return 0;
}
